--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.3.0
   path_provider: ^2.0.5
   path: ^1.8.3
+  intl: ^0.18.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
